Fixed java version issues for List class